# basic_cmake

./: CMakeLists.txt
